--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -119,6 +119,15 @@
         "code"
       ]
     },
+ {
+      "login": "arshivaastha",
+      "name": "Astha",
+      "avatar_url": "https://avatars.githubusercontent.com/u/78898085?s=400&u=f12d33997c7bffb99d7694f54904c36bc4b6d0bc&v=4",
+      "profile": "https://github.com/arshivaastha",
+      "contributions": [
+        "code"
+      ]
+    },
     {
       "login": "yogeshrajput335",
       "name": "Yogesh Rajput",
